tests/outref/TBT03.ref

-- TBT03: Test of BOOLEAN type across various queries with errors OR different output between Octo & Postgres
CREATE FUNCTION DOLLARZWRITE(INTEGER) RETURNS VARCHAR AS $ZWRITE;

-- Test that unary operator on a boolean value issues error
select +id::boolean from names;
select -id::boolean from names;

-- Test that numeric type cast to boolean does not issue error (northwind database)
-- Note: Postgres issues an error for this but Octo does not since in M numeric and integer are the same.
select Price::boolean from Products;

-- Test that string type cast to boolean issues error
select firstname::boolean from names;
select DOLLARZWRITE(id)::boolean from names;

-- Test GROUP BY and AGGREGATE FUNCTIONs (COUNT, MIN, MAX, SUM, AVG etc.) using boolean column
-- MIN/MAX/SUM/AVG does not work with boolean types. Only COUNT works.
select min(mybool) from (select id=2 as mybool from names) n1;
select max(mybool) from (select id=2 as mybool from names) n1;
select sum(mybool) from (select id=2 as mybool from names) n1;
select avg(mybool) from (select id=2 as mybool from names) n1;

-- Test set operations on boolean and non-boolean type columns errors out
select id=2 from names union select id from names;
select id=2 from names union select firstname from names;
select Price=2.5 from Products union select Price from Products;

[ERROR] PATH:LINENUM DATE TIME : Invalid input syntax : Expecting type NUMERIC or INTEGER : Actual type BOOLEAN
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select +id::boolean from names;
[ERROR] PATH:LINENUM DATE TIME : Invalid input syntax : Expecting type NUMERIC or INTEGER : Actual type BOOLEAN
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select -id::boolean from names;
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
[ERROR] PATH:LINENUM DATE TIME : Invalid input syntax for type boolean: 'Zero' is not a valid boolean value
[ERROR] PATH:LINENUM DATE TIME : Invalid input syntax for type boolean: '2' is not a valid boolean value
[ERROR] PATH:LINENUM DATE TIME : Function MIN cannot be invoked with a parameter of type BOOLEAN
Error with syntax near (line 1, column 8):

select min(mybool) from (select id=2 as mybool from names) n1;
       ^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select min(mybool) from (select id=2 as mybool from names) n1;
[ERROR] PATH:LINENUM DATE TIME : Function MAX cannot be invoked with a parameter of type BOOLEAN
Error with syntax near (line 1, column 8):

select max(mybool) from (select id=2 as mybool from names) n1;
       ^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select max(mybool) from (select id=2 as mybool from names) n1;
[ERROR] PATH:LINENUM DATE TIME : Function SUM cannot be invoked with a parameter of type BOOLEAN
Error with syntax near (line 1, column 8):

select sum(mybool) from (select id=2 as mybool from names) n1;
       ^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select sum(mybool) from (select id=2 as mybool from names) n1;
[ERROR] PATH:LINENUM DATE TIME : Function AVG cannot be invoked with a parameter of type BOOLEAN
Error with syntax near (line 1, column 8):

select avg(mybool) from (select id=2 as mybool from names) n1;
       ^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select avg(mybool) from (select id=2 as mybool from names) n1;
[ERROR] PATH:LINENUM DATE TIME : UNION types BOOLEAN and INTEGER cannot be matched
Error with syntax near (line 1, column 8):

select id=2 from names union select id from names;
       ^^^^
Error with syntax near (line 1, column 37):

select id=2 from names union select id from names;
                                    ^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select id=2 from names union select id from names;
[ERROR] PATH:LINENUM DATE TIME : UNION types BOOLEAN and VARCHAR cannot be matched
Error with syntax near (line 1, column 8):

select id=2 from names union select firstname from names;
       ^^^^
Error with syntax near (line 1, column 37):

select id=2 from names union select firstname from names;
                                    ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select id=2 from names union select firstname from names;
[ERROR] PATH:LINENUM DATE TIME : UNION types BOOLEAN and NUMERIC cannot be matched
Error with syntax near (line 1, column 8):

select Price=2.5 from Products union select Price from Products;
       ^^^^^^^^^
Error with syntax near (line 1, column 45):

select Price=2.5 from Products union select Price from Products;
                                            ^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select Price=2.5 from Products union select Price from Products;
